--- a/frontend/src/public/index.html
+++ b/frontend/src/public/index.html
@@ -10,6 +10,7 @@
 			body {
 				opacity: 1;
 				transition: opacity 0.5s ease-in-out;
+                font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 			}
 
 			.public-loading {
@@ -48,7 +49,7 @@
 			<svg
 				xmlns="http://www.w3.org/2000/svg"
 				viewBox="0 0 512 512"
-				fill="#6b21a8"
+				fill="#2a87bc"
 				width="70px"
 			>
 				<path
